--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -16,10 +16,14 @@
   "summary_of_tasks" : "Synthetic of tasks",
   "situation_of_handling_people" : "The situation of handling people's opinions",
   "people_opinions": "Opinion of the people",
-  "calendar_work" : "Canlendar work",
+  "calendar_work" : "Calendar work",
   "meeting_schedule" : "Meeting schedule",
   "work_list" : "Work list",
   "event_of_day" : "Event of the day",
-  "birthday" : "Birthday"
+  "birthday" : "Birthday",
+  "home" : "Home",
+  "report" : "Report",
+  "internal_interaction" : "Internal interaction",
+  "menu" : "Menu"
 
 }
