thêm giao diện lịch làm việc theo list

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -24,6 +24,9 @@
   "home" : "Home",
   "report" : "Report",
   "internal_interaction" : "Internal interaction",
-  "menu" : "Menu"
+  "menu" : "Menu",
+  "enterkeysearch" : "Import search key",
+  "inlistform" : "In list form",
+  "incalenderform" : "In calender form"
 
 }
