--- a/lib/l10n/intl_vi.arb
+++ b/lib/l10n/intl_vi.arb
@@ -24,7 +24,10 @@
   "home" : "Trang chủ",
   "report" : "Báo cáo",
   "internal_interaction" : "Tương tác nội bộ",
-  "menu" : "Menu"
+  "menu" : "Menu",
+  "enterkeysearch" : "Nhập từ khóa tìm kiếm",
+  "inlistform" : "Theo dạng list",
+  "incalenderform" : "Theo dạng lịch"
 
 
 
