--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -24,6 +24,9 @@
   "home" : "Home",
   "report" : "Report",
   "internal_interaction" : "Internal interaction",
-  "menu" : "Menu"
-
+  "menu" : "Menu",
+  "bao_cao_thong_ke": "Báo cáo thống kê",
+  "tin_tuc_thoi_su" : "Tin tức thời sự",
+  "theo_doi_bai_viet" : "Theo dõi bài viết",
+  "tat_ca_chu_de" : "Tất cả chủ đề"
 }
