--- a/lib/l10n/intl_vi.arb
+++ b/lib/l10n/intl_vi.arb
@@ -24,8 +24,9 @@
   "home" : "Trang chủ",
   "report" : "Báo cáo",
   "internal_interaction" : "Tương tác nội bộ",
-  "menu" : "Menu"
-
-
-
+  "menu" : "Menu",
+  "bao_cao_thong_ke": "Báo cáo thống kê",
+  "tin_tuc_thoi_su" : "Tin tức thời sự",
+  "theo_doi_bai_viet" : "Theo dõi bài viết",
+  "tat_ca_chu_de" : "Tất cả chủ đề"
 }
