ui_widget_manage_screen

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -24,6 +24,13 @@
   "home" : "Home",
   "report" : "Report",
   "internal_interaction" : "Internal interaction",
-  "menu" : "Menu"
+  "menu" : "Menu",
+  "using": "Đang sử dụng",
+  "not_use": "Chưa sử dụng",
+  "keep_drop": "Nhấn giữ kéo để di chuyển các dịch vụ ",
+  "default_word": "Mặc Định",
+  "no_data": "Không có dữ liệu",
+  "widget_manage": "Quản lý widgets"
+
 
 }
