up code ui và logic màn baseChooseTime (UI chưa đúng còn đợi design , phần logic đang xử lý tiếp

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -24,6 +24,7 @@
   "home" : "Home",
   "report" : "Report",
   "internal_interaction" : "Internal interaction",
-  "menu" : "Menu"
+  "menu" : "Menu",
+  "today": "Today"
 
 }
