tin tuc thoi su screen

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -29,5 +29,6 @@
   "tin_tuc_thoi_su" : "Tin tức thời sự",
   "theo_doi_bai_viet" : "Theo dõi bài viết",
   "tat_ca_chu_de" : "Tất cả chủ đề",
-  "nghe_doc_tin" : "Nghe đọc tin"
+  "nghe_doc_tin" : "Nghe đọc tin",
+  "tin_tong_hop" : "Tin tổng hợp"
 }
