btn sheet ban tin

--- a/lib/l10n/intl_vi.arb
+++ b/lib/l10n/intl_vi.arb
@@ -87,7 +87,9 @@
   "theo_doi_bai_viet" : "Theo dõi bài viết",
   "tat_ca_chu_de" : "Tất cả chủ đề",
   "nghe_doc_tin" : "Nghe đọc tin",
-  "tin_tong_hop" : "Tin tổng hợp"
+  "tin_tong_hop" : "Tin tổng hợp",
+  "ban_tin_trua_ngay" : "Bản tin trưa ngày",
+  "time_play" : "01:30 / 03/50"
 
 
 }
