--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -87,6 +87,20 @@
   "theo_doi_bai_viet" : "Theo dõi bài viết",
   "tat_ca_chu_de" : "Tất cả chủ đề",
   "nghe_doc_tin" : "Nghe đọc tin",
-  "tin_tong_hop" : "Tin tổng hợp"
+  "tin_tong_hop" : "Tin tổng hợp",
+  "hop" : "Họp",
+  "quan_ly_van_ban" : "Quản lý văn bản",
+  "hanh_chinh_cong" : "Hành chính công",
+  "y_kien_nguoi_dan" : "Ý kiến người dân",
+  "quan_ly_nhiem_vu" : "Quản lý nhiệm vụ",
+  "bao_chi_mang_xa_hoi" : "Báo chí mạng xã hội",
+  "ket_noi" : "Kết nối",
+  "tien_ich" : "Tiện ích",
+  "chuyen_pham_vi" : "Chuyển phạm vi",
+  "cai_dat_giao_dien" : "Cài đặt giao diện",
+  "hoi_dap" : "Hỏi đáp",
+  "doi_mat_khau" : "Đổi mật khẩu",
+  "dang_xuat" : "Đăng xuất",
+  "quan_ly_widget" : "Quản lý widgets"
 
 }
