ghep man pass word

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -135,5 +135,8 @@
   "share" : "Share",
   "comment" : "Comment",
   "bao_cao_chi_tiet" : "Báo cáo chi tiết >",
-  "time_play" : "01:30 / 03/50"
+  "time_play" : "01:30 / 03/50",
+  "email" : "Email",
+  "doi_lai_mat_khau_thanh_cong" : "Đổi lại mật khẩu thành công",
+  "chuc_mung_ban" : "Chúc mừng bạn đã đổi lại mật khẩu thành công"
 }
