--- a/lib/l10n/intl_vi.arb
+++ b/lib/l10n/intl_vi.arb
@@ -133,5 +133,8 @@
   "like" : "Like",
   "share" : "Share",
   "comment" : "Comment",
-  "bao_cao_chi_tiet" : "Báo cáo chi tiết >"
+  "bao_cao_chi_tiet" : "Báo cáo chi tiết >",
+  "email" : "Email",
+  "doi_lai_mat_khau_thanh_cong" : "Đổi lại mật khẩu thành công",
+  "chuc_mung_ban" : "Chúc mừng bạn đã đổi lại mật khẩu thành công"
 }
