--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -138,5 +138,9 @@
   "time_play" : "01:30 / 03/50",
   "email" : "Email",
   "doi_lai_mat_khau_thanh_cong" : "Đổi lại mật khẩu thành công",
-  "chuc_mung_ban" : "Chúc mừng bạn đã đổi lại mật khẩu thành công"
+  "chuc_mung_ban" : "Chúc mừng bạn đã đổi lại mật khẩu thành công",
+  "tim_kiem" : "Tìm kiếm",
+  "nhap_tu_khoa_tim_kiem" : "Nhập từ khoá tìm kiếm",
+  "tu_khoa_pho_bien" : "Từ khóa phổ biến"
+
 }
