--- a/lib/l10n/intl_vi.arb
+++ b/lib/l10n/intl_vi.arb
@@ -136,5 +136,9 @@
   "bao_cao_chi_tiet" : "Báo cáo chi tiết >",
   "email" : "Email",
   "doi_lai_mat_khau_thanh_cong" : "Đổi lại mật khẩu thành công",
-  "chuc_mung_ban" : "Chúc mừng bạn đã đổi lại mật khẩu thành công"
+  "chuc_mung_ban" : "Chúc mừng bạn đã đổi lại mật khẩu thành công",
+  "tim_kiem" : "Tìm kiếm",
+  "nhap_tu_khoa_tim_kiem" : "Nhập từ khoá tìm kiếm",
+  "tu_khoa_pho_bien" : "Từ khóa phổ biến"
+
 }
