common_qlvb_mobile

--- a/lib/l10n/intl_vi.arb
+++ b/lib/l10n/intl_vi.arb
@@ -136,5 +136,8 @@
   "bao_cao_chi_tiet" : "Báo cáo chi tiết >",
   "email" : "Email",
   "doi_lai_mat_khau_thanh_cong" : "Đổi lại mật khẩu thành công",
-  "chuc_mung_ban" : "Chúc mừng bạn đã đổi lại mật khẩu thành công"
+  "chuc_mung_ban" : "Chúc mừng bạn đã đổi lại mật khẩu thành công",
+  "trong_han" : "Trong hạn",
+  "qua_han" : "Quá hạn",
+  "thuong_khan" : "Thượng khẩn"
 }
