--- a/lib/l10n/intl_vi.arb
+++ b/lib/l10n/intl_vi.arb
@@ -137,5 +137,7 @@
   "email" : "Email",
   "doi_lai_mat_khau_thanh_cong" : "Đổi lại mật khẩu thành công",
   "chuc_mung_ban" : "Chúc mừng bạn đã đổi lại mật khẩu thành công",
-  "khong_the_bo_trong" : "Không thể bỏ trống"
+  "khong_the_bo_trong" : "Không thể bỏ trống",
+  "danh_sach_van_ban_den": "Danh sách văn bản đến",
+  "danh_sach_van_ban_di": "Danh sách văn bản đi"
 }
