--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -46,7 +46,6 @@
   "cho_cho_y_kien_VB_den" : "Chờ cho ý kiến VB đến",
   "cho_trinh_ky_VB_di" : "Chờ trình ký VB đi",
   "misson" : "Nhiệm vụ",
-  "hello" : "Xin chào",
   "da_xu_ly" : "Đã xử lý",
   "cho_vao_so" : "Chờ vào sổ",
   "cho_trinh_ky" : "Chờ trình ký",
@@ -88,7 +87,6 @@
   "tat_ca_chu_de" : "Tất cả chủ đề",
   "nghe_doc_tin" : "Nghe đọc tin",
   "tin_tong_hop" : "Tin tổng hợp",
-
   "hop" : "Họp",
   "quan_ly_van_ban" : "Quản lý văn bản",
   "hanh_chinh_cong" : "Hành chính công",
@@ -122,7 +120,7 @@
   "password": "Mật khẩu",
   "save_password": "Ghi nhớ đăng nhập",
   "login": "Đăng nhập",
-  "hello": "Xin chào!",
+  "hello": "Xin chào",
   "wellcom_login": "Vui lòng đăng nhập để sử dụng ứng dụng",
   "tong_tin" : "Tổng tin",
   "bao_chi" : "Báo chí",
@@ -135,8 +133,10 @@
   "share" : "Share",
   "comment" : "Comment",
   "bao_cao_chi_tiet" : "Báo cáo chi tiết >",
-  "time_play" : "01:30 / 03/50",
   "email" : "Email",
   "doi_lai_mat_khau_thanh_cong" : "Đổi lại mật khẩu thành công",
-  "chuc_mung_ban" : "Chúc mừng bạn đã đổi lại mật khẩu thành công"
+  "chuc_mung_ban" : "Chúc mừng bạn đã đổi lại mật khẩu thành công",
+  "cho_phan_xu_ly" : "Chờ phân xử lý",
+  "loai_nhiem_vu" : "Loại nhiệm vụ",
+  "han_xu_ly" : "Hạn xử lý"
 }
