--- a/lib/l10n/intl_vi.arb
+++ b/lib/l10n/intl_vi.arb
@@ -139,5 +139,7 @@
   "chuc_mung_ban" : "Chúc mừng bạn đã đổi lại mật khẩu thành công",
   "khong_the_bo_trong" : "Không thể bỏ trống",
   "danh_sach_van_ban_den": "Danh sách văn bản đến",
-  "danh_sach_van_ban_di": "Danh sách văn bản đi"
+  "danh_sach_van_ban_di": "Danh sách văn bản đi",
+  "nhan_ma_xac_minh": "Nhận mã xác minh",
+  "de_nhan_ma_xac_minh": "Để nhận mã xác minh, trước tiên hãy xác nhận địa chỉ email khôi phục mà bạn đã thêm vào tài khoản của mình"
 }
