--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -141,7 +141,7 @@
   "chuc_mung_ban" : "Chúc mừng bạn đã đổi lại mật khẩu thành công",
   "khong_the_bo_trong" : "Không thể bỏ trống",
   "danh_sach_van_ban_den": "Danh sách văn bản đến",
-  "danh_sach_van_ban_di": "Danh sách văn bản đi"
+  "danh_sach_van_ban_di": "Danh sách văn bản đi",
   "tim_kiem" : "Tìm kiếm",
   "nhap_tu_khoa_tim_kiem" : "Nhập từ khoá tìm kiếm",
   "tu_khoa_pho_bien" : "Từ khóa phổ biến"
