--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -152,7 +152,7 @@
   "anh_chu_ky": "Ảnh chữ ký",
   "anh_ky_nhay": "Ảnh ký nháy",
   "manager_information": "Quản lý thông tin cá nhân",
-  "dat_lai_mac_dinh": "Đặt lại về mặc định"
+  "dat_lai_mac_dinh": "Đặt lại về mặc định",
   "danh_sach_van_ban_di": "Danh sách văn bản đi",
   "tim_kiem" : "Tìm kiếm",
   "nhap_tu_khoa_tim_kiem" : "Nhập từ khoá tìm kiếm",
