--- a/lib/l10n/intl_vi.arb
+++ b/lib/l10n/intl_vi.arb
@@ -151,5 +151,6 @@
   "anh_chu_ky": "Ảnh chữ ký",
   "anh_ky_nhay": "Ảnh ký nháy",
   "manager_information": "Quản lý thông tin cá nhân",
-  "dat_lai_mac_dinh": "Đặt lại về mặc định"
+  "dat_lai_mac_dinh": "Đặt lại về mặc định",
+  "cai_dat" : "Cài đặt"
 }
