--- a/lib/l10n/intl_vi.arb
+++ b/lib/l10n/intl_vi.arb
@@ -155,6 +155,6 @@
   "danh_sach_van_ban_di": "Danh sách văn bản đi",
   "tim_kiem" : "Tìm kiếm",
   "nhap_tu_khoa_tim_kiem" : "Nhập từ khoá tìm kiếm",
-  "tu_khoa_pho_bien" : "Từ khóa phổ biến"
-
+  "tu_khoa_pho_bien" : "Từ khóa phổ biến",
+  "tim_kiem" : "Tìm kiếm"
 }
