--- a/lib/l10n/intl_vi.arb
+++ b/lib/l10n/intl_vi.arb
@@ -141,5 +141,7 @@
   "danh_sach_van_ban_den": "Danh sách văn bản đến",
   "danh_sach_van_ban_di": "Danh sách văn bản đi",
   "nhan_ma_xac_minh": "Nhận mã xác minh",
-  "de_nhan_ma_xac_minh": "Để nhận mã xác minh, trước tiên hãy xác nhận địa chỉ email khôi phục mà bạn đã thêm vào tài khoản của mình"
+  "de_nhan_ma_xac_minh": "Để nhận mã xác minh, trước tiên hãy xác nhận địa chỉ email khôi phục mà bạn đã thêm vào tài khoản của mình",
+  "khong_trung_mat_khau_moi": "Không trùng với mật khẩu mới",
+  "khong_trung_mat_khau_nhap_lai": "Không trùng với mật khẩu nhập lại"
 }
