--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -147,6 +147,9 @@
   "khong_the_bo_trong" : "Không thể bỏ trống",
   "danh_sach_van_ban_den": "Danh sách văn bản đến",
   "danh_sach_van_ban_di": "Danh sách văn bản đi",
-  "thong_tin_chung": "Thông tin chung"
+  "thong_tin_chung": "Thông tin chung",
+  "chi_tiet_vb": "Xem danh sách chi tiết",
+  "tiem_kiem": "Tìm kiếm từ khóa"
+
 
 }
