thêm giao diện hoi dap tablet

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -162,5 +162,7 @@
   "tim_kiem" : "Tìm kiếm",
   "tieu_de" : "Tiêu đề",
   "chu_de" : "Chủ đề",
-  "loai_hdsd" : "Loại HDSD"
+  "loai_hdsd" : "Loại HDSD",
+  "tim_kiem_hoi_dap" : "Tìm kiếm hỏi đáp",
+  "ban_co_the_tim_kiem_hoi_dap" : "Bạn có thể tìm kiếm các hỏi đáp tại đây"
 }
