--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -170,5 +170,25 @@
   "phuong_xa": "Phường/Xã",
   "dinh_dang_email": "Sai định dạng email",
   "dinh_dang_sdt": "Sai định dạng số điện thoại",
-  "huy": "Hủy"
+  "huy": "Hủy",
+
+  "ho_ten": "Họ và tên",
+  "ma_can_bo": "Mã cán bộ",
+  "thu_tu": "Thứ tự",
+  "ngay_sinh": "Ngày sinh",
+  "cmnd": "Số cmnd",
+  "gioi_tinh": "Giới tính",
+  "Email": "Email",
+  "sdt_co_quan": "SĐT cơ quan",
+  "sdt_lien_he": "SĐT liên hệ",
+  "dia_chi_lien_he": "Địa chỉ liên hệ",
+  "trang_thai": "Trạng Thái",
+  "hoat_dong": "Hoạt động",
+  "k_hoat_dong": "Không hoạt động",
+  "stt": "STT",
+  "ung_dung": "Ứng dụng",
+  "ten_dang_nhap": "Tên đăng nhập",
+  "mac_dinh": "Mặc định",
+  "chuc_vu": "Chức vụ",
+  "id": "id"
 }
