--- a/lib/l10n/intl_vi.arb
+++ b/lib/l10n/intl_vi.arb
@@ -1,7 +1,7 @@
 {
   "@@locale": "en",
-  "ok": "Ok",
-  "cancel": "Cancel",
+  "ok": "Đồng ý",
+  "cancel": "Hủy",
   "something_went_wrong": "Something went wrong. Please try again later.",
   "error": "Error",
   "error_network": "No internet!",
