--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -163,5 +163,6 @@
   "loai_hdsd" : "Loại HDSD",
   "AQI" : "AQI",
   "tim_kiem_hoi_dap" : "Tìm kiếm hỏi đáp",
-  "ban_co_the_tim_kiem_hoi_dap" : "Bạn có thể tìm kiếm các hỏi đáp tại đây"
+  "ban_co_the_tim_kiem_hoi_dap" : "Bạn có thể tìm kiếm các hỏi đáp tại đây",
+  "thong_bao" : "Thông báo"
 }
