--- a/lib/l10n/intl_vi.arb
+++ b/lib/l10n/intl_vi.arb
@@ -122,38 +122,31 @@
   "save_password": "Ghi nhớ đăng nhập",
   "login": "Đăng nhập",
   "wellcom_login": "Vui lòng đăng nhập để sử dụng ứng dụng",
-  "tong_tin" : "Tổng tin",
-  "bao_chi" : "Báo chí",
-  "mang_xa_hoi" : "Mạng xã hội",
-  "forum" : "Forum",
-  "blog" : "Blog",
-  "nguon_khac" : "Nguon khác",
-  "bai_viet" : "Bài viết",
-  "like" : "Like",
-  "share" : "Share",
-  "comment" : "Comment",
-  "bao_cao_chi_tiet" : "Báo cáo chi tiết >",
-  "email" : "Email",
-  "doi_lai_mat_khau_thanh_cong" : "Đổi lại mật khẩu thành công",
-  "chuc_mung_ban" : "Chúc mừng bạn đã đổi lại mật khẩu thành công",
-
-
-  "trong_han" : "Trong hạn",
-  "thuong_khan" : "Thượng khẩn",
-
-  "khong_the_bo_trong" : "Không thể bỏ trống",
+  "tong_tin": "Tổng tin",
+  "bao_chi": "Báo chí",
+  "mang_xa_hoi": "Mạng xã hội",
+  "forum": "Forum",
+  "blog": "Blog",
+  "nguon_khac": "Nguon khác",
+  "bai_viet": "Bài viết",
+  "like": "Like",
+  "share": "Share",
+  "comment": "Comment",
+  "bao_cao_chi_tiet": "Báo cáo chi tiết >",
+  "email": "Email",
+  "doi_lai_mat_khau_thanh_cong": "Đổi lại mật khẩu thành công",
+  "chuc_mung_ban": "Chúc mừng bạn đã đổi lại mật khẩu thành công",
+  "trong_han": "Trong hạn",
+  "thuong_khan": "Thượng khẩn",
+  "khong_the_bo_trong": "Không thể bỏ trống",
   "danh_sach_van_ban_den": "Danh sách văn bản đến",
   "danh_sach_van_ban_di": "Danh sách văn bản đi",
   "thong_tin_chung": "Thông tin chung",
   "chi_tiet_vb": "Xem danh sách chi tiết",
   "tiem_kiem": "Tìm kiếm từ khóa",
-
-
-
-  "cho_phan_xu_ly" : "Chờ phân xử lý",
-  "loai_nhiem_vu" : "Loại nhiệm vụ",
-  "han_xu_ly" : "Hạn xử lý",
-
+  "cho_phan_xu_ly": "Chờ phân xử lý",
+  "loai_nhiem_vu": "Loại nhiệm vụ",
+  "han_xu_ly": "Hạn xử lý",
   "nhan_ma_xac_minh": "Nhận mã xác minh",
   "de_nhan_ma_xac_minh": "Để nhận mã xác minh, trước tiên hãy xác nhận địa chỉ email khôi phục mà bạn đã thêm vào tài khoản của mình",
   "khong_trung_mat_khau_moi": "Không trùng với mật khẩu mới",
@@ -206,6 +199,11 @@
   "AQI": "AQI",
   "tim_kiem_hoi_dap": "Tìm kiếm hỏi đáp",
   "ban_co_the_tim_kiem_hoi_dap": "Bạn có thể tìm kiếm các hỏi đáp tại đây",
-  "tim_kiem": "Tìm kiếm"
-
+  "tim_kiem": "Tìm kiếm",
+  "danhSach": "Danh sách lịch sẽ được hiển thị những loại lịch nào?",
+  "noi_dung": "Nội dung",
+  "chinh_sua_hdsd": "Chỉnh sửa hướng dẫn sử dụng",
+  "xem_truoc": "Xem trước",
+  "cap_nhat": "Cập nhật",
+  "chu_de_hdsd": "Chủ đề HDSD"
 }
