update code them_hdsd

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -206,5 +206,7 @@
   "chinh_sua_hdsd": "Chỉnh sửa hướng dẫn sử dụng",
   "xem_truoc": "Xem trước",
   "chu_de_hdsd": "Chủ đề HDSD",
-  "xem_danh_sach": "Xem danh sách chi tiết"
+  "xem_danh_sach": "Xem danh sách chi tiết",
+  "them_moi": "Thêm mới",
+  "them_hdsd": "Thêm hướng dẫn sử dụng"
 }
