--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -189,7 +189,6 @@
   "hoat_dong": "Hoạt động",
   "k_hoat_dong": "Không hoạt động",
   "stt": "STT",
-  "ung_dung": "Ứng dụng",
   "ten_dang_nhap": "Tên đăng nhập",
   "mac_dinh": "Mặc định",
   "chuc_vu": "Chức vụ",
@@ -209,17 +208,7 @@
   "chu_de_hdsd": "Chủ đề HDSD",
   "xem_danh_sach": "Xem danh sách chi tiết",
   "them_moi": "Thêm mới",
-  "them_hdsd": "Thêm hướng dẫn sử dụng"
-  "cai_dat" : "Cài đặt",
-  "tim_kiem" : "Tìm kiếm",
-  "nhap_tu_khoa_tim_kiem" : "Nhập từ khoá tìm kiếm",
-  "tu_khoa_pho_bien" : "Từ khóa phổ biến",
-  "tieu_de" : "Tiêu đề",
-  "chu_de" : "Chủ đề",
-  "loai_hdsd" : "Loại HDSD",
-  "AQI" : "AQI",
-  "tim_kiem_hoi_dap" : "Tìm kiếm hỏi đáp",
-  "ban_co_the_tim_kiem_hoi_dap" : "Bạn có thể tìm kiếm các hỏi đáp tại đây",
+  "them_hdsd": "Thêm hướng dẫn sử dụng",
   "thong_bao" : "Thông báo",
   "vao_hop_truc_tuyen" : "Vào họp trực tuyến :",
   "thong_bao_khan" : "Thông báo khẩn"
