--- a/lib/l10n/intl_vi.arb
+++ b/lib/l10n/intl_vi.arb
@@ -151,8 +151,6 @@
   "de_nhan_ma_xac_minh": "Để nhận mã xác minh, trước tiên hãy xác nhận địa chỉ email khôi phục mà bạn đã thêm vào tài khoản của mình",
   "khong_trung_mat_khau_moi": "Không trùng với mật khẩu mới",
   "khong_trung_mat_khau_nhap_lai": "Không trùng với mật khẩu nhập lại",
-  "danh_sach_van_ban_di": "Danh sách văn bản đi",
-  "ung_dung": "Ứng dụng",
   "don_vi": "Đơn vị",
   "thong_tin": "Thông tin",
   "anh_dai_dien": "Ảnh đại điện",
@@ -187,21 +185,10 @@
   "hoat_dong": "Hoạt động",
   "k_hoat_dong": "Không hoạt động",
   "stt": "STT",
-  "ung_dung": "Ứng dụng",
   "ten_dang_nhap": "Tên đăng nhập",
   "mac_dinh": "Mặc định",
   "chuc_vu": "Chức vụ",
   "id": "id",
-  "cai_dat": "Cài đặt",
-  "nhap_tu_khoa_tim_kiem": "Nhập từ khoá tìm kiếm",
-  "tu_khoa_pho_bien": "Từ khóa phổ biến",
-  "tieu_de": "Tiêu đề",
-  "chu_de": "Chủ đề",
-  "loai_hdsd": "Loại HDSD",
-  "AQI": "AQI",
-  "tim_kiem_hoi_dap": "Tìm kiếm hỏi đáp",
-  "ban_co_the_tim_kiem_hoi_dap": "Bạn có thể tìm kiếm các hỏi đáp tại đây",
-  "tim_kiem": "Tìm kiếm",
   "danhSach": "Danh sách lịch sẽ được hiển thị những loại lịch nào?",
   "noi_dung": "Nội dung",
   "chinh_sua_hdsd": "Chỉnh sửa hướng dẫn sử dụng",
@@ -209,7 +196,7 @@
   "chu_de_hdsd": "Chủ đề HDSD",
   "xem_danh_sach": "Xem danh sách chi tiết",
   "them_moi": "Thêm mới",
-  "them_hdsd": "Thêm hướng dẫn sử dụng"
+  "them_hdsd": "Thêm hướng dẫn sử dụng",
   "cai_dat" : "Cài đặt",
   "nhap_tu_khoa_tim_kiem" : "Nhập từ khoá tìm kiếm",
   "tu_khoa_pho_bien" : "Từ khóa phổ biến",
@@ -223,5 +210,4 @@
   "thong_bao" : "Thông báo",
   "vao_hop_truc_tuyen" : "Vào họp trực tuyến :",
   "thong_bao_khan" : "Thông báo khẩn"
-
 }
