--- a/lib/l10n/intl_vi.arb
+++ b/lib/l10n/intl_vi.arb
@@ -185,21 +185,10 @@
   "hoat_dong": "Hoạt động",
   "k_hoat_dong": "Không hoạt động",
   "stt": "STT",
-  "ung_dung": "Ứng dụng",
   "ten_dang_nhap": "Tên đăng nhập",
   "mac_dinh": "Mặc định",
   "chuc_vu": "Chức vụ",
   "id": "id",
-  "cai_dat": "Cài đặt",
-  "nhap_tu_khoa_tim_kiem": "Nhập từ khoá tìm kiếm",
-  "tu_khoa_pho_bien": "Từ khóa phổ biến",
-  "tieu_de": "Tiêu đề",
-  "chu_de": "Chủ đề",
-  "loai_hdsd": "Loại HDSD",
-  "AQI": "AQI",
-  "tim_kiem_hoi_dap": "Tìm kiếm hỏi đáp",
-  "ban_co_the_tim_kiem_hoi_dap": "Bạn có thể tìm kiếm các hỏi đáp tại đây",
-  "tim_kiem": "Tìm kiếm",
   "danhSach": "Danh sách lịch sẽ được hiển thị những loại lịch nào?",
   "noi_dung": "Nội dung",
   "chinh_sua_hdsd": "Chỉnh sửa hướng dẫn sử dụng",
@@ -207,5 +196,18 @@
   "chu_de_hdsd": "Chủ đề HDSD",
   "xem_danh_sach": "Xem danh sách chi tiết",
   "them_moi": "Thêm mới",
-  "them_hdsd": "Thêm hướng dẫn sử dụng"
+  "them_hdsd": "Thêm hướng dẫn sử dụng",
+  "cai_dat" : "Cài đặt",
+  "nhap_tu_khoa_tim_kiem" : "Nhập từ khoá tìm kiếm",
+  "tu_khoa_pho_bien" : "Từ khóa phổ biến",
+  "tieu_de" : "Tiêu đề",
+  "chu_de" : "Chủ đề",
+  "loai_hdsd" : "Loại HDSD",
+  "AQI" : "AQI",
+  "tim_kiem_hoi_dap" : "Tìm kiếm hỏi đáp",
+  "ban_co_the_tim_kiem_hoi_dap" : "Bạn có thể tìm kiếm các hỏi đáp tại đây",
+  "tim_kiem" : "Tìm kiếm",
+  "thong_bao" : "Thông báo",
+  "vao_hop_truc_tuyen" : "Vào họp trực tuyến :",
+  "thong_bao_khan" : "Thông báo khẩn"
 }
