--- a/lib/l10n/intl_vi.arb
+++ b/lib/l10n/intl_vi.arb
@@ -207,5 +207,7 @@
   "chu_de_hdsd": "Chủ đề HDSD",
   "xem_danh_sach": "Xem danh sách chi tiết",
   "them_moi": "Thêm mới",
-  "them_hdsd": "Thêm hướng dẫn sử dụng"
+  "them_hdsd": "Thêm hướng dẫn sử dụng",
+  "xem_hdsd": "Xem trước HDSD",
+  "thong_tin_chuong_trinh_hop": "Thông tin về Chương trình họp"
 }
