--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -216,5 +216,7 @@
   "thong_tin_chuong_trinh_hop": "Thông tin về Chương trình họp",
   "thong_bao": "Thông báo",
   "vao_hop_truc_tuyen": "Vào họp trực tuyến :",
-  "thong_bao_khan": "Thông báo khẩn"
+  "thong_bao_khan": "Thông báo khẩn",
+  "xem_truoc": "Xem trước"
+
 }
