--- a/lib/l10n/intl_vi.arb
+++ b/lib/l10n/intl_vi.arb
@@ -214,5 +214,6 @@
   "xoa_hdsd": "Xoá HDSD",
   "thong_bao": "Thông báo",
   "vao_hop_truc_tuyen": "Vào họp trực tuyến :",
-  "thong_bao_khan": "Thông báo khẩn"
+  "thong_bao_khan": "Thông báo khẩn",
+  "xem_truoc": "Xem trước"
 }
