update lich lam viec theo ngay

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -217,6 +217,8 @@
   "thong_bao": "Thông báo",
   "vao_hop_truc_tuyen": "Vào họp trực tuyến :",
   "thong_bao_khan": "Thông báo khẩn",
-  "xem_truoc": "Xem trước"
-
+  "xem_truoc": "Xem trước",
+  "ngay": "Ngày",
+  "tuan": "Tuần",
+  "thang": "Tháng"
 }
