--- a/lib/l10n/intl_vi.arb
+++ b/lib/l10n/intl_vi.arb
@@ -35,7 +35,7 @@
   "cho_xu_ly": "Chờ xử lý",
   "dang_xu_ly": "Đang xử lý",
   "cho_tiep_nhan": "Chờ tiếp nhận",
-  "lich_cua_toi": "Lịch của tôi",
+  "lich_hop_cua_toi": "Lịch họp của tôi",
   "lich_duoc_moi": "Lịch được mời",
   "lich_hop_duoc_moi": "Lịch họp được mời",
   "lich_hop_can_duyet": "Lịch họp cần duyệt",
@@ -192,7 +192,6 @@
   "danhSach": "Danh sách lịch sẽ được hiển thị những loại lịch nào?",
   "noi_dung": "Nội dung",
   "chinh_sua_hdsd": "Chỉnh sửa hướng dẫn sử dụng",
-  "xem_truoc": "Xem trước",
   "chu_de_hdsd": "Chủ đề HDSD",
   "xem_danh_sach": "Xem danh sách chi tiết",
   "them_moi": "Thêm mới",
@@ -215,5 +214,12 @@
   "thong_bao": "Thông báo",
   "vao_hop_truc_tuyen": "Vào họp trực tuyến :",
   "thong_bao_khan": "Thông báo khẩn",
-  "xem_truoc": "Xem trước"
+  "xem_truoc": "Xem trước",
+  "ca_nhan" : "Cá nhân",
+  "nhiem_vu" : "Nhiệm vụ",
+  "dang_thuc_hien" : "Đang thực hiện",
+  "danh_sach_cong_viec" : "Danh sách công việc",
+  "cho_xu_ly_vb_di" : "Chờ xử lý VB đi",
+  "cho_duyet_xu_ly" : "Chờ duyệt xử lý",
+  "cho_duyet_tiep_nhan" : "Chờ duyệt tiếp nhận"
 }
