--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -223,6 +223,11 @@
   "danh_sach_cong_viec" : "Danh sách công việc",
   "cho_xu_ly_vb_di" : "Chờ xử lý VB đi",
   "cho_duyet_xu_ly" : "Chờ duyệt xử lý",
-  "cho_duyet_tiep_nhan" : "Chờ duyệt tiếp nhận"
+  "cho_duyet_tiep_nhan" : "Chờ duyệt tiếp nhận",
+  "tuy_chon" : "Tùy chọn",
+  "tu_ngay" : "Từ ngày",
+  "den_ngay" : "Đến ngày",
+  "dong" : "Đóng",
+  "chon_khoang_thoi_gian" : "Chọn khoảng thời gian"
 
 }
