--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -218,6 +218,7 @@
   "vao_hop_truc_tuyen": "Vào họp trực tuyến :",
   "thong_bao_khan": "Thông báo khẩn",
   "xem_truoc": "Xem trước",
-  "danh_sach_lich_hop": "Danh sách lịch họp"
+  "danh_sach_lich_hop": "Danh sách lịch họp",
+  "truc_tiep": "Trực tiếp"
 
 }
