--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -207,7 +207,6 @@
   "danhSach": "Danh sách lịch sẽ được hiển thị những loại lịch nào?",
   "noi_dung": "Nội dung",
   "chinh_sua_hdsd": "Chỉnh sửa hướng dẫn sử dụng",
-  "xem_truoc": "Xem trước",
   "chu_de_hdsd": "Chủ đề HDSD",
   "xem_danh_sach": "Xem danh sách chi tiết",
   "them_moi": "Thêm mới",
@@ -217,6 +216,11 @@
   "thong_bao": "Thông báo",
   "vao_hop_truc_tuyen": "Vào họp trực tuyến :",
   "thong_bao_khan": "Thông báo khẩn",
-  "xem_truoc": "Xem trước"
+  "xem_truoc": "Xem trước",
+  "chon_thanh_phan_tham_gia" : "Chọn thành phần tham gia",
+  "danh_sach_don_vi_tham_gia" : "Danh sách đơn vị tham gia",
+  "dong" : "Đóng",
+  "them" : "Thêm",
+  "them_don_vi" : "Thêm đơn vị"
 
 }
