--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -217,11 +217,16 @@
   "thong_bao": "Thông báo",
   "vao_hop_truc_tuyen": "Vào họp trực tuyến :",
   "thong_bao_khan": "Thông báo khẩn",
-  "xem_truoc": "Xem trước",
   "tao_lich_cong_tac_trong_nuoc" : "Tạo lịch công tác trong nước",
   "lich_cong_tac_trong_nuoc" : "Lịch công tác trong nước",
   "lich_lam_viec" : "Lịch làm việc",
   "lich_cong_tac_nuoc_ngoai" : "Lịch công tác nước ngoài",
   "lich_tiep_dan" : "Lịch tiếp dân",
-  "admin_tao" : "Admin tạo"
+  "admin_tao" : "Admin tạo",
+  "loai_lich" : "Loai lich",
+  "nhac_lai" : "Nhắc lại",
+  "mau_mac_dinh" : "Màu mặc định",
+  "linh_vuc" : "Lĩnh vực",
+  "thanh_phan_tham_gia" : "Thành phần tham gia",
+  "tai_lieu" : "Tài liệu"
 }
