--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -247,5 +247,6 @@
   "dv_phoi_hop" : "ĐV phối hợp",
   "nguoi_pho_hop" : "Người phối hợp",
   "gui_email" : "Gửi email",
-  "truc_tiep": "Trực tiếp"
+  "truc_tiep": "Trực tiếp",
+  "don_vi_phoi_hop" : "Đơn vị phối hợp"
 }
