--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -272,5 +272,6 @@
   "nhap_noi_dung_cong_viec" : "Nhập nội dung công viêc",
   "dv_phoi_hop" : "ĐV phối hợp",
   "nguoi_pho_hop" : "Người phối hợp",
+  "gui_email" : "Gửi email",
   "don_vi_phoi_hop" : "Đơn vị phối hợp"
 }
