--- a/lib/l10n/intl_vi.arb
+++ b/lib/l10n/intl_vi.arb
@@ -279,6 +279,12 @@
   "gui_email" : "Gửi email",
   "don_vi_phoi_hop" : "Đơn vị phối hợp",
   "tao_lich_hop" : "Tạo lịch họp",
-  "thong_tin_lich" : "Thông tin lịch"
+  "thong_tin_lich" : "Thông tin lịch",
+  "hop_truc_tiep" : "Họp trực tiếp",
+  "trong_don_vi" : "Trong đơn vị",
+  "loai_hop" : "Loại họp",
+  "muc_do_hop" : "Mức độ họp",
+  "them_nguoi" : "Thêm người",
+  "lich_lap" : "Lịch lặp"
 
 }
