push de ve code tiep

--- a/lib/l10n/intl_vi.arb
+++ b/lib/l10n/intl_vi.arb
@@ -285,6 +285,8 @@
   "loai_hop" : "Loại họp",
   "muc_do_hop" : "Mức độ họp",
   "them_nguoi" : "Thêm người",
-  "lich_lap" : "Lịch lặp"
-
+  "lich_lap" : "Lịch lặp",
+  "sua_lich_cong_tac_trong_nuoc" : "Sửa lịch công tác trong nước",
+  "ubnd_tinh_dong_nai" : "UBND Tỉnh Đồng Nai",
+  "bao_cao_thuong_vu" : "Báo cáo thường vụ"
 }
