sua lich cong tac

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -288,5 +288,6 @@
   "lich_lap" : "Lịch lặp",
   "sua_lich_cong_tac_trong_nuoc" : "Sửa lịch công tác trong nước",
   "ubnd_tinh_dong_nai" : "UBND Tỉnh Đồng Nai",
-  "bao_cao_thuong_vu" : "Báo cáo thường vụ"
+  "bao_cao_thuong_vu" : "Báo cáo thường vụ",
+  "lich_cong_tac" : "Lịch công tác"
 }
