--- a/lib/l10n/intl_vi.arb
+++ b/lib/l10n/intl_vi.arb
@@ -300,6 +300,16 @@
   "don_vi_phoi_hop_khac" : "Đơn vị phối hợp khác",
   "them_thanh_phan_tham_gia" : "Thêm thành phần tham gia",
   "them_thong_tin_khach_moi" : "Thêm thông tin khách mời",
-  "khach_moi" : "Khách mời"
+  "khach_moi" : "Khách mời",
+  "phong_hop_thuong" : "Phòng họp thường",
+  "phong_trung_tam_dieu_hanh" : "Phòng trung tâm điều hành",
+  "loai_phong_hop" : "Loại phòng họp",
+  "yeu_cau_them_thiet_bi" : "Yêu cầu thêm thiết bị",
+  "them_thiet_bi_trong_phong" : "Thêm thiết bị trong phòng",
+  "ten_thiet_bi" : "Tên thiết bị",
+  "so_luong" : "Số lượng",
+  "nhap_ten_thiet_bi" : "Nhập tên thiết bị",
+  "check_so_luong" : " Số lượng thiết bị chỉ có thể có các kí tự số"
+
 
 }
