--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -312,5 +312,8 @@
   "sua_lich_cong_tac_trong_nuoc" : "Sửa lịch công tác trong nước",
   "ubnd_tinh_dong_nai" : "UBND Tỉnh Đồng Nai",
   "bao_cao_thuong_vu" : "Báo cáo thường vụ",
-  "lich_cong_tac" : "Lịch công tác"
+  "lich_cong_tac" : "Lịch công tác",
+  "bao_cao_ket_qua": "Báo cáo kết quả",
+  "y_kien": "Ý kiến"
+
 }
