--- a/lib/l10n/intl_vi.arb
+++ b/lib/l10n/intl_vi.arb
@@ -221,41 +221,40 @@
   "tuan": "Tuần",
   "thang": "Tháng",
   "lich_cua_toi": "Lịch của tôi",
-  "tao_lich_cong_tac_trong_nuoc" : "Tạo lịch công tác trong nước",
-  "lich_cong_tac_trong_nuoc" : "Lịch công tác trong nước",
-  "lich_lam_viec" : "Lịch làm việc",
-  "lich_cong_tac_nuoc_ngoai" : "Lịch công tác nước ngoài",
-  "lich_tiep_dan" : "Lịch tiếp dân",
-  "admin_tao" : "Admin tạo",
-  "loai_lich" : "Loai lich",
-  "nhac_lai" : "Nhắc lại",
-  "mau_mac_dinh" : "Màu mặc định",
-  "linh_vuc" : "Lĩnh vực",
-  "thanh_phan_tham_gia" : "Thành phần tham gia",
-  "tai_lieu" : "Tài liệu",
-  "ca_nhan" : "Cá nhân",
-  "nhiem_vu" : "Nhiệm vụ",
-  "dang_thuc_hien" : "Đang thực hiện",
-  "danh_sach_cong_viec" : "Danh sách công việc",
-  "cho_xu_ly_vb_di" : "Chờ xử lý VB đi",
-  "cho_duyet_xu_ly" : "Chờ duyệt xử lý",
-  "cho_duyet_tiep_nhan" : "Chờ duyệt tiếp nhận",
-  "tuy_chon" : "Tùy chọn",
-  "tu_ngay" : "Từ ngày",
-  "den_ngay" : "Đến ngày",
-  "dong" : "Đóng",
-  "chon_khoang_thoi_gian" : "Chọn khoảng thời gian",
-  "bo_qua" : "Bỏ qua",
-  "hien_thi" : "Hiện thị",
-  "chon_thanh_phan_tham_gia" : "Chọn thành phần tham gia",
-  "danh_sach_don_vi_tham_gia" : "Danh sách đơn vị tham gia",
-  "them" : "Thêm",
-  "them_don_vi" : "Thêm đơn vị",
+  "tao_lich_cong_tac_trong_nuoc": "Tạo lịch công tác trong nước",
+  "lich_cong_tac_trong_nuoc": "Lịch công tác trong nước",
+  "lich_lam_viec": "Lịch làm việc",
+  "lich_cong_tac_nuoc_ngoai": "Lịch công tác nước ngoài",
+  "lich_tiep_dan": "Lịch tiếp dân",
+  "admin_tao": "Admin tạo",
+  "loai_lich": "Loai lich",
+  "nhac_lai": "Nhắc lại",
+  "mau_mac_dinh": "Màu mặc định",
+  "linh_vuc": "Lĩnh vực",
+  "thanh_phan_tham_gia": "Thành phần tham gia",
+  "tai_lieu": "Tài liệu",
+  "ca_nhan": "Cá nhân",
+  "nhiem_vu": "Nhiệm vụ",
+  "dang_thuc_hien": "Đang thực hiện",
+  "danh_sach_cong_viec": "Danh sách công việc",
+  "cho_xu_ly_vb_di": "Chờ xử lý VB đi",
+  "cho_duyet_xu_ly": "Chờ duyệt xử lý",
+  "cho_duyet_tiep_nhan": "Chờ duyệt tiếp nhận",
+  "tuy_chon": "Tùy chọn",
+  "tu_ngay": "Từ ngày",
+  "den_ngay": "Đến ngày",
+  "dong": "Đóng",
+  "chon_khoang_thoi_gian": "Chọn khoảng thời gian",
+  "bo_qua": "Bỏ qua",
+  "hien_thi": "Hiện thị",
+  "chon_thanh_phan_tham_gia": "Chọn thành phần tham gia",
+  "danh_sach_don_vi_tham_gia": "Danh sách đơn vị tham gia",
+  "them": "Thêm",
+  "them_don_vi": "Thêm đơn vị",
   "danh_sach_lich_hop": "Danh sách lịch họp",
   "status": "Tình trạng",
   "noidung": "Nội dung",
   "file": "File",
-  "bao_cao_ket_qua": "Báo cáo kết quả",
   "trung_binh": "Trung bình",
   "dat": "Đạt",
   "khong_dat": "Không đạt",
@@ -267,53 +266,53 @@
   "thong_tin_bo_sung": "Thông tin bổ sung",
   "van_ban_dinh_kem": "Các văn bản đính kèm",
   "truc_tiep": "Trực tiếp",
-  "tai_lieu_dinh_kem" : "Tài liệu đính kèm",
-  "ca_ngay" : "Cả ngày",
-  "bat_dau" : "Bắt đầu",
-  "ket_thuc" : "Kết thúc",
-  "tao_lich_lam_viec" : "Tạo lịch làm việc",
-  "vui_long_kiem_tra_lai_time" : "Vui lòng kiểm tra lại thời gian",
-  "them_can_bo" : "Thêm cán bộ",
-  "don_vi_phong_ban" : "Đơn vị/Phòng ban",
-  "luu" : "Lưu",
-  "chon_don_vi_phong_ban" : "Chọn Đơn vị/Phòng ban",
-  "nhap_ten_don_vi_phong_ban" : "Nhập tên Đơn vị/Phòng ban",
-  "ten_can_bo" : "Tên cán bộ",
-  "phuong_thuc_nhan_khac" : "Phương thức nhận khác",
-  "nhap_noi_dung_cong_viec" : "Nhập nội dung công viêc",
-  "dv_phoi_hop" : "ĐV phối hợp",
-  "nguoi_pho_hop" : "Người phối hợp",
-  "gui_email" : "Gửi email",
-  "don_vi_phoi_hop" : "Đơn vị phối hợp",
-  "danh_sach_bao_cao_ket_qua" : "Danh sách báo cáo kết quả",
-  "xoa_bao_cao_ket_qua" : "Xóa báo cáo kết quả",
-  "chan_chan_xoa_bao_cao_khong" : "Bạn có chắc chắn muốn xóa báo cáo kết quả",
+  "tai_lieu_dinh_kem": "Tài liệu đính kèm",
+  "ca_ngay": "Cả ngày",
+  "bat_dau": "Bắt đầu",
+  "ket_thuc": "Kết thúc",
+  "tao_lich_lam_viec": "Tạo lịch làm việc",
+  "vui_long_kiem_tra_lai_time": "Vui lòng kiểm tra lại thời gian",
+  "them_can_bo": "Thêm cán bộ",
+  "don_vi_phong_ban": "Đơn vị/Phòng ban",
+  "luu": "Lưu",
+  "chon_don_vi_phong_ban": "Chọn Đơn vị/Phòng ban",
+  "nhap_ten_don_vi_phong_ban": "Nhập tên Đơn vị/Phòng ban",
+  "ten_can_bo": "Tên cán bộ",
+  "phuong_thuc_nhan_khac": "Phương thức nhận khác",
+  "nhap_noi_dung_cong_viec": "Nhập nội dung công viêc",
+  "dv_phoi_hop": "ĐV phối hợp",
+  "nguoi_pho_hop": "Người phối hợp",
+  "gui_email": "Gửi email",
+  "don_vi_phoi_hop": "Đơn vị phối hợp",
+  "danh_sach_bao_cao_ket_qua": "Danh sách báo cáo kết quả",
+  "xoa_bao_cao_ket_qua": "Xóa báo cáo kết quả",
+  "chan_chan_xoa_bao_cao_khong": "Bạn có chắc chắn muốn xóa báo cáo kết quả",
   "dinh_kem_file": "Tài liệu đính kèm",
   "sua": "Sửa",
   "chinh_sua_bao_cao_ket_qua": "Chỉnh sửa báo cáo kết quả",
-  "tao_lich_hop" : "Tạo lịch họp",
-  "thong_tin_lich" : "Thông tin lịch",
-  "hop_truc_tiep" : "Họp trực tiếp",
-  "trong_don_vi" : "Trong đơn vị",
-  "loai_hop" : "Loại họp",
-  "muc_do_hop" : "Mức độ họp",
-  "them_nguoi" : "Thêm người",
-  "lich_lap" : "Lịch lặp",
-  "sua_lich_cong_tac_trong_nuoc" : "Sửa lịch công tác trong nước",
-  "ubnd_tinh_dong_nai" : "UBND Tỉnh Đồng Nai",
-  "bao_cao_thuong_vu" : "Báo cáo thường vụ",
-  "lich_cong_tac" : "Lịch công tác",
-  "chi_tiet_lich_lam_viec" : "Chi tiết lịch làm việc",
-  "hop_noi_bo_cong_ty" : "Họp nội bộ công ty",
-  "thong_tin_lien_he" : "Thông tin liên hệ",
-  "ho_ten" : "Họ tên",
-  "so_dien_thoai" : "Số điện thoại",
-  "chon_phong_hop" : "Chọn phòng họp",
-  "don_vi_phoi_hop_khac" : "Đơn vị phối hợp khác",
-  "them_thanh_phan_tham_gia" : "Thêm thành phần tham gia",
-  "them_thong_tin_khach_moi" : "Thêm thông tin khách mời",
-  "khach_moi" : "Khách mời",
+  "tao_lich_hop": "Tạo lịch họp",
+  "thong_tin_lich": "Thông tin lịch",
+  "hop_truc_tiep": "Họp trực tiếp",
+  "trong_don_vi": "Trong đơn vị",
+  "loai_hop": "Loại họp",
+  "muc_do_hop": "Mức độ họp",
+  "them_nguoi": "Thêm người",
+  "lich_lap": "Lịch lặp",
+  "sua_lich_cong_tac_trong_nuoc": "Sửa lịch công tác trong nước",
+  "ubnd_tinh_dong_nai": "UBND Tỉnh Đồng Nai",
+  "bao_cao_thuong_vu": "Báo cáo thường vụ",
+  "lich_cong_tac": "Lịch công tác",
+  "chi_tiet_lich_lam_viec": "Chi tiết lịch làm việc",
+  "hop_noi_bo_cong_ty": "Họp nội bộ công ty",
+  "thong_tin_lien_he": "Thông tin liên hệ",
+  "ho_ten": "Họ tên",
+  "so_dien_thoai": "Số điện thoại",
+  "chon_phong_hop": "Chọn phòng họp",
+  "don_vi_phoi_hop_khac": "Đơn vị phối hợp khác",
+  "them_thanh_phan_tham_gia": "Thêm thành phần tham gia",
+  "them_thong_tin_khach_moi": "Thêm thông tin khách mời",
+  "khach_moi": "Khách mời",
   "bao_cao_ket_qua": "Báo cáo kết quả",
-  "y_kien": "Ý kiến"
-
+  "y_kien": "Ý kiến",
+  "trung": "Trùng"
 }
