--- a/lib/l10n/intl_vi.arb
+++ b/lib/l10n/intl_vi.arb
@@ -325,5 +325,9 @@
   "chinh_sua_bao_cao_ket_qua": "Chỉnh sửa báo cáo kết quả",
   "bao_cao_ket_qua": "Báo cáo kết quả",
   "y_kien": "Ý kiến",
-  "trung": "Trùng"
+  "trung": "Trùng",
+  "ten_don_vi" : "Tên đơn vị",
+  "dau_moi_lam_viec" : "Đầu mối làm việc",
+  "noi_dung_lam_viec" : "Nội dung làm việc"
+
 }
