--- a/lib/l10n/intl_vi.arb
+++ b/lib/l10n/intl_vi.arb
@@ -105,7 +105,7 @@
   "dat_lai_mat_khau": "Đặt lại mật khẩu",
   "mat_khau_hien_tai": "Mật khẩu hiện tại",
   "mat_khau_moi": "Mật khẩu mới",
-  "nhap_lai_mat_khau": "Nhập lại mật khẩu",
+  "nhap_lai_mat_khau": "Nhập lại mật khẩu mới",
   "quen_mat_khau": "Quên mật khẩu",
   "cap_nhat": "Cập nhật",
   "tiep_theo": "Tiếp theo",
