--- a/lib/l10n/intl_vi.arb
+++ b/lib/l10n/intl_vi.arb
@@ -342,5 +342,6 @@
   "nhap_ten_phien_hop": "Nhập tên phiên họp",
   "thoi_gian_hop": "Thời gian họp",
   "chon_nguoi_chu_tri": "Chọn người chủ trì",
-  "noi_dung_phien_hop": "Nội dung phiên họp"
+  "noi_dung_phien_hop": "Nội dung phiên họp",
+  "luu_lai": "Lưu lại "
 }
