--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -354,6 +354,7 @@
   "theo_dang_danh_sach" : "Theo dạng danh sách",
   "lich_theo_trang_thai" : "Lịch theo trạng thái",
   "lich_theo_lanh_dao" : "Lịch theo lãnh đạo",
-  "menu_lich_lam_viec" : "Menu Lịch làm việc"
+  "menu_lich_lam_viec" : "Menu Lịch làm việc",
+  "dang_nhap_that_bai" : "Đăng nhập thất bại hãy thử lại"
 
 }
