--- a/lib/l10n/intl_vi.arb
+++ b/lib/l10n/intl_vi.arb
@@ -368,6 +368,21 @@
   "so_noi_vu" : "Sở Nội vụ",
   "phong_tai_chinh_noi_chinh" : "Phòng Tài chính - Nội chính",
   "phong_kinh_te_nghanh" : "Phòng Kinh tế ngành",
-  "so_tai_chinh" : "Sở Tài chính"
+  "so_tai_chinh" : "Sở Tài chính",
+  "thong_tin_y_kien_nguoi_dan" : "Thông tin ý kiến người dân",
+  "tinh_hinh_y_kien_nguoi_dan" : "Tình hình xử lý ý kiến người dân",
+  "chua_thuc_hien": "chưa thực hiện",
+  "phan_loai_nguon_yknd": "Phân loại theo nguồn YKND đã nhận của đơn vị mình",
+  "cong_dvc_quoc_gia": "Cổng DVC quốc gia",
+  "thu_dien_tu": "Thư điện tử kstthc@mpi.gov.vn",
+  "thu_dien_tu_hai": "Thư điện tử banbientap@mpi.gov.vn",
+  "ung_dung_chi_dao_dieu_hanh": "Ứng dụng chỉ đạo điều hành",
+  "he_thong_quan_ly_van_ban": "Hệ thống quản lý văn bản",
+  "danh_sach_y_kien_nguoi_Dan": "Danh sách ý kiến người dân"
+
+
+
+
+
 
 }
