--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -355,6 +355,13 @@
   "lich_theo_trang_thai" : "Lịch theo trạng thái",
   "lich_theo_lanh_dao" : "Lịch theo lãnh đạo",
   "menu_lich_lam_viec" : "Menu Lịch làm việc",
-  "dang_nhap_that_bai" : "Đăng nhập thất bại hãy thử lại"
+  "dang_nhap_that_bai" : "Đăng nhập thất bại hãy thử lại",
+  "nhiem_vu_ca_nhan" : "Nhiệm vụ cá nhân",
+  "nhiem_vu_don_vi" : "Nhiệm vụ đơn vị",
+  "cong_viec" : "Công việc",
+  "da_thuc_hien" : "Đã thực hiện",
+  "chua_thuc_hien" : "Chưa thực hiện",
+  "danh_sach_nhiem_vu" : "Danh sách nhiệm vụ"
+
 
 }
