fix giao diện và flow luông

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -375,7 +375,7 @@
   "so_tai_chinh" : "Sở Tài chính",
   "thong_tin_y_kien_nguoi_dan" : "Thông tin ý kiến người dân",
   "tinh_hinh_y_kien_nguoi_dan" : "Tình hình xử lý ý kiến người dân",
-  "chua_thuc_hien": "chưa thực hiện",
+  "chua_thuc_hien": "Chưa thực hiện",
   "phan_loai_nguon_yknd": "Phân loại theo nguồn YKND đã nhận của đơn vị mình",
   "cong_dvc_quoc_gia": "Cổng DVC quốc gia",
   "thu_dien_tu": "Thư điện tử kstthc@mpi.gov.vn",
