--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -386,6 +386,7 @@
   "chinh_sua_tag" : "Chỉnh sửa tag",
   "them_tag" : "Thêm tag",
   "tu_choi" : "Từ chối",
-  "luu_lai": "Lưu lại "
-
+  "luu_lai": "Lưu lại ",
+  "xem_danh_sah_chi_tiet": "Xem danh sách chi tiết",
+  "phan_loai_yknd": "Phân loại YKND theo nguồn nhận của đơn vị"
 }
