--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -386,6 +386,7 @@
   "chinh_sua_tag" : "Chỉnh sửa tag",
   "them_tag" : "Thêm tag",
   "tu_choi" : "Từ chối",
-  "luu_lai": "Lưu lại "
+  "luu_lai": "Lưu lại ",
+  "bac_cao": "Báo cáo"
 
 }
