--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -388,5 +388,9 @@
   "tu_choi" : "Từ chối",
   "luu_lai": "Lưu lại ",
   "xem_danh_sah_chi_tiet": "Xem danh sách chi tiết",
-  "phan_loai_yknd": "Phân loại YKND theo nguồn nhận của đơn vị"
+  "phan_loai_yknd": "Phân loại YKND theo nguồn nhận của đơn vị",
+  "so_nhiem_vu" : "Số nhiệm vụ",
+  "tinh_hinh_thuc_hien" : "Tình hình thực hiện",
+  "nguoi_giao" : "Người giao",
+  "chi_tiet_nhiem_vu" : "Chi tiết nhiệm vụ"
 }
