--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -388,5 +388,10 @@
   "tu_choi" : "Từ chối",
   "luu_lai": "Lưu lại ",
   "xem_danh_sah_chi_tiet": "Xem danh sách chi tiết",
-  "phan_loai_yknd": "Phân loại YKND theo nguồn nhận của đơn vị"
+  "phan_loai_yknd": "Phân loại YKND theo nguồn nhận của đơn vị",
+  "don_vi_giao_viec": "ĐV giao việc",
+  "nguoi_giao_viec": "Người giao việc",
+  "dv_ca_nhan_thuc_hien": "ĐV/Cá nhân thực hiện",
+  "muc_do_cong_viec": "Mức độ công việc",
+  "chi_tiet_cong_viec": "Chi tiết công việc"
 }
