--- a/lib/l10n/intl_vi.arb
+++ b/lib/l10n/intl_vi.arb
@@ -388,6 +388,7 @@
   "tu_choi" : "Từ chối",
   "luu_lai": "Lưu lại ",
   "xem_danh_sah_chi_tiet": "Xem danh sách chi tiết",
-  "phan_loai_yknd": "Phân loại YKND theo nguồn nhận của đơn vị"
+  "phan_loai_yknd": "Phân loại YKND theo nguồn nhận của đơn vị",
+  "danh_sach_y_kien_nd": "Danh sách ý kiến người dân"
 
 }
