su kien trong ngay

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -387,6 +387,7 @@
   "them_tag" : "Thêm tag",
   "tu_choi" : "Từ chối",
   "luu_lai": "Lưu lại ",
-  "su_kien" : "Sự kiện"
-
+  "su_kien" : "Sự kiện",
+  "ong" : "Ông",
+  "ba" : "Bà"
 }
