--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -387,6 +387,9 @@
   "them_tag" : "Thêm tag",
   "tu_choi" : "Từ chối",
   "luu_lai": "Lưu lại ",
+  "su_kien" : "Sự kiện",
+  "ong" : "Ông",
+  "ba" : "Bà",
   "bac_cao": "Báo cáo",
   "xem_danh_sah_chi_tiet": "Xem danh sách chi tiết",
   "phan_loai_yknd": "Phân loại YKND theo nguồn nhận của đơn vị",
