--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -444,5 +444,6 @@
   "nguoi_don_doc" : "Người đôn đốc",
   "don_vi_don_doc": "Đơn vị đôn đốc",
   "noi_dung_don_doc" : "Nội dung đôn đốc",
-  "nguoi_bi_don_doc" : "Người bị đôn đốc"
+  "nguoi_bi_don_doc" : "Người bị đôn đốc",
+  "don_vi_bi_don_doc" : "Đơn vị bị đôn đốc"
 }
