figbug chi tiet van ban tablet

--- a/lib/l10n/intl_vi.arb
+++ b/lib/l10n/intl_vi.arb
@@ -466,5 +466,6 @@
   "don_vi_don_doc": "Đơn vị đôn đốc",
   "noi_dung_don_doc" : "Nội dung đôn đốc",
   "nguoi_bi_don_doc" : "Người bị đôn đốc",
-  "don_vi_bi_don_doc" : "Đơn vị bị đôn đốc"
+  "don_vi_bi_don_doc" : "Đơn vị bị đôn đốc",
+  "xem_luong" : "Xem luồng"
 }
