--- a/lib/l10n/intl_vi.arb
+++ b/lib/l10n/intl_vi.arb
@@ -467,5 +467,6 @@
   "noi_dung_don_doc" : "Nội dung đôn đốc",
   "nguoi_bi_don_doc" : "Người bị đôn đốc",
   "don_vi_bi_don_doc" : "Đơn vị bị đôn đốc",
-  "xem_luong" : "Xem luồng"
+  "xem_luong" : "Xem luồng",
+  "don_vi_gui" : "Đơn vị gửi"
 }
