--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -469,5 +469,10 @@
   "nguoi_bi_don_doc" : "Người bị đôn đốc",
   "don_vi_bi_don_doc" : "Đơn vị bị đôn đốc",
   "xem_luong" : "Xem luồng",
-  "don_vi_gui" : "Đơn vị gửi"
+  "don_vi_gui" : "Đơn vị gửi",
+  "chon_can_bo_hoac_don_vi_de_thu_hoi" : "Chọn cán bộ hoặc đơn vị để thu hồi",
+  "chon_thu_ky_cuoc_hop" : "Chọn thư ký cuộc họp",
+  "Chon_can_bo_boc_bang" : "Chọn cán sử dụng bóc băng",
+  "Chon_don_vi_su_dung" : "Chọn đơn vị sử dụng"
+
 }
