--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -472,7 +472,9 @@
   "don_vi_gui" : "Đơn vị gửi",
   "chon_can_bo_hoac_don_vi_de_thu_hoi" : "Chọn cán bộ hoặc đơn vị để thu hồi",
   "chon_thu_ky_cuoc_hop" : "Chọn thư ký cuộc họp",
-  "Chon_can_bo_boc_bang" : "Chọn cán sử dụng bóc băng",
-  "Chon_don_vi_su_dung" : "Chọn đơn vị sử dụng"
+  "Chon_can_bo_boc_bang" : "Chọn cán bộ sử dụng bóc băng",
+  "Chon_don_vi_su_dung" : "Chọn đơn vị sử dụng",
+  "thu_hoi_lich" : "Thu hồi lịch"
+
 
 }
