--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -467,5 +467,15 @@
   "don_vi_don_doc": "Đơn vị đôn đốc",
   "noi_dung_don_doc" : "Nội dung đôn đốc",
   "nguoi_bi_don_doc" : "Người bị đôn đốc",
-  "don_vi_bi_don_doc" : "Đơn vị bị đôn đốc"
+  "don_vi_bi_don_doc" : "Đơn vị bị đôn đốc",
+  "vai_tro": "Vai trò",
+  "thong_tin_xu_ly_phan_anh": "Thông tin xử lý phản ánh kiến nghị",
+  "thoi_gian_thao_tac": "Thời gian thao tác",
+  "tai_khoan_thao_tac": "Tài khoản thao tác ",
+  "trang_thai_xu_ly": "Trạng thái xử lý",
+  "noi_dung_xu_ly": "Nội dung xử lý",
+  "don_vi_thao_tac": "Đơn vị thao tác",
+  "ket_qua_xu_ly": "Kết quả xử lý",
+  "tien_trinh_xu_ly": "Tiến trình xử lý"
+
 }
