--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -475,6 +475,7 @@
   "chon_can_bo_hoac_don_vi_de_thu_hoi" : "Chọn cán bộ hoặc đơn vị để thu hồi",
   "chon_thu_ky_cuoc_hop" : "Chọn thư ký cuộc họp",
   "Chon_can_bo_boc_bang" : "Chọn cán sử dụng bóc băng",
-  "Chon_don_vi_su_dung" : "Chọn đơn vị sử dụng"
+  "Chon_don_vi_su_dung" : "Chọn đơn vị sử dụng",
+  "tong_so_lich_lam_viec": "Tổng số lịch làm việc"
 
 }
