tao lich hop thanh phan tham gia

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -499,5 +499,6 @@
   "Chon_can_bo_boc_bang" : "Chọn cán sử dụng bóc băng",
   "Chon_don_vi_su_dung" : "Chọn đơn vị sử dụng",
   "nhap_ten_don_vi": "Nhập tên đơn vị",
-  "thu_hoi_lich" : "Thu hồi lịch"
+  "thu_hoi_lich" : "Thu hồi lịch",
+  "bao_cao_thong_ke": "Báo cáo thống kê"
 }
