--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -509,7 +509,9 @@
   "dong_y" : "Đồng ý",
   "xoa_lich_lam_viec" : "Xóa lịch làm việc",
   "ban_co_muon_xoa_lich_lam_viec" : "Bạn có muốn xóa lịch làm việc?",
-  "xoa_thanh_cong" : "Xóa thành công"
+  "xoa_thanh_cong" : "Xóa thành công",
+  "sua_thanh_cong" : "Sửa thành công"
+
 
 
 
