--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -55,14 +55,14 @@
   "enterkeysearch": "Nhập từ khóa tìm kiếm",
   "inlistform": "Theo dạng list",
   "incalenderform": "Theo dạng lịch",
-  "thu_hai": "T.Hai",
-  "thu_ba": "T.Ba",
-  "thu_tu": "T.Tư",
-  "thu_nam": "T.Năm",
-  "thu_sau": "T.Sáu",
-  "thu_bay": "T.Bảy",
+  "thu_hai": "Thứ hai",
+  "thu_ba": "Thứ ba",
+  "thu_tu": "Thứ tư",
+  "thu_nam": "Thứ năm",
+  "thu_sau": "Thứ sáu",
+  "thu_bay": "Thứ bảy",
   "hello": "Xin chào",
-  "chu_nhat": "CN",
+  "chu_nhat": "Chủ nhật",
   "chon_ngay": "Chọn ngày",
   "da_hoan_thanh": "Đã hoàn thành",
   "them_cong_viec": "Thêm công việc",
@@ -516,10 +516,8 @@
   "dinh_kem" : "Đính kèm",
   "sua_thanh_cong" : "Sửa thành công",
   "binh_thuong" : "Bình thường",
-  "dot_xuat" : "Đột xuất"
-
-
-
-
+  "dot_xuat" : "Đột xuất",
+  "cong_tac_chuan_bi": "Công tác chuẩn bị",
+  "thong_tin_phong" : "Thông tin phòng"
 
 }
