--- a/lib/l10n/intl_vi.arb
+++ b/lib/l10n/intl_vi.arb
@@ -517,7 +517,14 @@
   "binh_thuong" : "Bình thường",
   "dot_xuat" : "Đột xuất",
   "cong_tac_chuan_bi": "Công tác chuẩn bị",
-  "thong_tin_phong" : "Thông tin phòng"
+  "thong_tin_phong" : "Thông tin phòng",
+  "cho_duyet" : "Chờ duyệt",
+  "da_duyet" : "Đã duyệt",
+  "ten_phong" : "Tên phòng",
+  "suc_chua" : "Sức chứa",
+  "thiet_bi_san_co" : "Thiết bị sẵn có",
+  "loai_thiet_bi":"Loại thiết bị"
+
 }
 
 
