--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -8,6 +8,7 @@
   "retry": "Retry",
   "unauthorized": "Your session has expired. Please sign in.",
   "search": "Search...",
+  "list_empty": "Danh sách trống",
   "press_socialNetWord": "Báo chí - mạng xã hội",
   "word_processing_state": "Tình hình xử lý văn bản",
   "document": "Văn bản",
