--- a/lib/l10n/intl_vi.arb
+++ b/lib/l10n/intl_vi.arb
@@ -186,7 +186,7 @@
   "sdt_co_quan": "Số điện thoại cơ quan",
   "sdt_lien_he": "Số điện thoại",
   "dia_chi_lien_he": "Địa chỉ liên hệ",
-  "trang_thai": "Trạng Thái",
+  "trang_thai": "Trạng thái",
   "hoat_dong": "Hoạt động",
   "k_hoat_dong": "Không hoạt động",
   "stt": "STT",
@@ -500,30 +500,23 @@
   "hoi_bao_van_ban": "Hồi báo văn bản",
   "da_nhan_ban_giay": "Đã nhận bản giấy",
   "nhap_ten_don_vi": "Nhập tên đơn vị",
-
   "thu_hoi_lich": "Thu hồi lịch",
   "cho_y_kien": "Cho ý kiến",
-  "ban_chan_chan_huy_lich_nay" : "Bạn có chắc muốn hủy lịch này?",
-  "khong" : "Không",
-  "huy_lich" : "Hủy lịch",
-  "dong_y" : "Đồng ý",
-  "xoa_lich_lam_viec" : "Xóa lịch làm việc",
-  "ban_co_muon_xoa_lich_lam_viec" : "Bạn có muốn xóa lịch làm việc?",
-  "xoa_thanh_cong" : "Xóa thành công",
-  "khong_co_file" : "Không có file",
-  "cac_van_ban_dinh_kem" : "Các văn bản đính kèm",
-  "nhap_y_kien_cua_ban" : "Nhập ý kiến của bạn",
-  "dinh_kem" : "Đính kèm",
-  "sua_thanh_cong" : "Sửa thành công",
-  "binh_thuong" : "Bình thường",
-  "dot_xuat" : "Đột xuất",
-
-
-
-
-
-
-
+  "ban_chan_chan_huy_lich_nay": "Bạn có chắc muốn hủy lịch này?",
+  "khong": "Không",
+  "huy_lich": "Hủy lịch",
+  "dong_y": "Đồng ý",
+  "xoa_lich_lam_viec": "Xóa lịch làm việc",
+  "ban_co_muon_xoa_lich_lam_viec": "Bạn có muốn xóa lịch làm việc?",
+  "xoa_thanh_cong": "Xóa thành công",
+  "khong_co_file": "Không có file",
+  "cac_van_ban_dinh_kem": "Các văn bản đính kèm",
+  "nhap_y_kien_cua_ban": "Nhập ý kiến của bạn",
+  "dinh_kem": "Đính kèm",
+  "sua_thanh_cong": "Sửa thành công",
+  "binh_thuong": "Bình thường",
+  "dot_xuat": "Đột xuất",
+  "sua_that_bai": "Sửa thất bại"
 }
 
 
